--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>massive text</title>
+		<meta name="description" content="like big type, but just more massive. huge even.">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
