--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>massive text</title>
-		<meta name="description" content="like big type, but just more massive. huge even.">
+		<meta name="description" content="like big type, but just more massive. huge even." />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
